--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,16 @@ board = genericSTM32F407VET6
 framework = arduino
 lib_deps = 
 	stm32duino/STM32duino FreeRTOS@^10.3.2
+build_flags = 
+	-DENABLE_HWSERIAL1
+  -DENABLE_HWSERIAL2
+  -DENABLE_HWSERIAL3
+	-DENABLE_HWSERIAL6
+	-DPIN_SERIAL1_RX=PB7
+	-DPIN_SERIAL1_TX=PB6
+	-DPIN_SERIAL2_RX=PA3
+	-DPIN_SERIAL2_TX=PA2
+	-DPIN_SERIAL3_RX=PB11 
+	-DPIN_SERIAL3_TX=PB10
+	-DPIN_SERIAL6_RX=PC7
+	-DPIN_SERIAL6_TX=PC6
