add debug option

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = ststm32
 board = genericSTM32F407VET6
 framework = arduino
-lib_deps = 
-	stm32duino/STM32duino FreeRTOS@^10.3.2
+; lib_deps = 
+; 	stm32duino/STM32duino FreeRTOS@^10.3.2
 build_flags = 
 	-DENABLE_HWSERIAL1
   -DENABLE_HWSERIAL2
