--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = ststm32
 board = genericSTM32F407VET6
 framework = arduino
+build_type = debug
 ; lib_deps = 
 ; 	stm32duino/STM32duino FreeRTOS@^10.3.2
 build_flags = 
